Sequencer strip audio pan not working #47140

Closed
opened 2016-01-08 04:26:27 +01:00 by david mcsween · 20 comments

System Information
Win 7 sp1 Corei5 8Gb AMD Radeon HD7470
Operating system and graphics card

Blender Version
Broken: (2.76 #6158a98)
Worked: (optional)

Short description of error
Video Sequencer does not perform pan function on audio strips. It does not render out pan either.

Exact steps for others to reproduce the error

  1. import audio file to VSE
  2. select audio strip and pan audio value to extreme value -2.0 left or 2.0 right
  3. play (no change audio remains centered)
  4. export/render (no change audio remains centered)
**System Information** Win 7 sp1 Corei5 8Gb AMD Radeon HD7470 Operating system and graphics card **Blender Version** Broken: (2.76 #6158a98) Worked: (optional) **Short description of error** Video Sequencer does not perform pan function on audio strips. It does not render out pan either. **Exact steps for others to reproduce the error** 1. import audio file to VSE 2. select audio strip and pan audio value to extreme value -2.0 left or 2.0 right 3. play (no change audio remains centered) 4. export/render (no change audio remains centered)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween

Added subscriber: @mont29

Added subscriber: @mont29
Joerg Mueller was assigned by Bastien Montagne 2016-01-08 10:09:43 +01:00

Confirmed… BKE_sound_set_scene_sound_pan() is called as expected, so issue seems to be in audaspace, Joerg, mind having a look? thanks.

Confirmed… `BKE_sound_set_scene_sound_pan()` is called as expected, so issue seems to be in audaspace, Joerg, mind having a look? thanks.
Member

That's not a bug, have you tried +/-1 instead of +/-2? -1 is left and +1 is right, +/-2 is centered in the back which in stereo is the same as 0 panning, you will only notice the difference with more speakers.

That's not a bug, have you tried +/-1 instead of +/-2? -1 is left and +1 is right, +/-2 is centered in the back which in stereo is the same as 0 panning, you will only notice the difference with more speakers.

Eeeh… well, even with -1 or +1 I cannot really hear any panning here (using a headphone)…

Eeeh… well, even with -1 or +1 I cannot really hear any panning here (using a headphone)…
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member
Does the manual state this correctly? http://www.blender.org/manual/editors/sequencer/strips/audio.html#options
Member

I just tried, panning is not working. Will look into it as soon as I have time.

I just tried, panning is not working. Will look into it as soon as I have time.
Member

Ok, I tried again and figured, that the sound I tried with was a stereo sound. As the tooltip correctly states, panning only works with mono sources.

Now when you add sound strips to Blender you cannot specify them to be mono as you can when you simply add a sound, so I added that option to the operator. I also added the option in the properties panel (N key) just below the caching option. Last but not least I found a bug while trying, which is that a sound of the sequence does not get updated when changed in said properties panel.

The patch that does all that is here for now if you want to try: http://www.pasteall.org/63269/diff

If you want to try if panning works you can simply find the sound in the outliner (data blocks -> sounds) and check the mono flag, then it should work.

@Blendify: no, the manual doesn't state it correctly, and it also doesn't state that it only works for mono sounds. -1 is hard left and +1 hard right, everything with abs(pan) > 1 goes to the back with +/-2 being the back center as stated in my first comment.

Ok, I tried again and figured, that the sound I tried with was a stereo sound. As the tooltip correctly states, panning only works with mono sources. Now when you add sound strips to Blender you cannot specify them to be mono as you can when you simply add a sound, so I added that option to the operator. I also added the option in the properties panel (N key) just below the caching option. Last but not least I found a bug while trying, which is that a sound of the sequence does not get updated when changed in said properties panel. The patch that does all that is here for now if you want to try: http://www.pasteall.org/63269/diff If you want to try if panning works you can simply find the sound in the outliner (data blocks -> sounds) and check the mono flag, then it should work. @Blendify: no, the manual doesn't state it correctly, and it also doesn't state that it only works for mono sounds. -1 is hard left and +1 hard right, everything with abs(pan) > 1 goes to the back with +/-2 being the back center as stated in my first comment.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

I committed an updated version of the patch as 85d6759636: Audaspace: Sequencer sound bugfix and mono UI.

If the bug persists after you made sure the sound is mono, feel free to reopen the report.

I committed an updated version of the patch as 85d6759636: Audaspace: Sequencer sound bugfix and mono UI. If the bug persists after you made sure the sound is mono, feel free to reopen the report.
Member

I will write a documentation patch and add you as a reviewer

I will write a documentation patch and add you as a reviewer

Added subscriber: @aecii

Added subscriber: @aecii

Edit
Never mind, its working :3
You have to literally Enter "-1" or "+1" for hard panning.
Also, If you slide slow you will notice the subtle change.


Im still seeing this problem in 2.79
2018-01-29

What i've tried:
Loaded stereo audio file into vse, adjusted pan, no change.
Checked mono box, adjusted pan to hard left / hard right, no change.
Converted stereo audio in audacity to mono.
Loaded mono audio track into vse, adjusted pan to hard left / hard right, no change.
checked mono box, adjusted pan to hard left / hard right, no change.

Opened out-liner->data blocks, sounds, checked mono in there. seems to be selecting mono OK.
Adjusted pan to hard left / hard right, no change.

Any ideas?

***Edit*** Never mind, its working :3 You have to literally Enter "-1" or "+1" for hard panning. Also, If you slide slow you will notice the subtle change. --------------- Im still seeing this problem in 2.79 2018-01-29 What i've tried: Loaded stereo audio file into vse, adjusted pan, no change. Checked mono box, adjusted pan to hard left / hard right, no change. Converted stereo audio in audacity to mono. Loaded mono audio track into vse, adjusted pan to hard left / hard right, no change. checked mono box, adjusted pan to hard left / hard right, no change. Opened out-liner->data blocks, sounds, checked mono in there. seems to be selecting mono OK. Adjusted pan to hard left / hard right, no change. Any ideas?

Added subscriber: @Paskperfect

Added subscriber: @Paskperfect

Confirming that under MacOS 10.13.3, Blender Vers 2.79a hash 61335d8 is working as advertised:

  1. Stereo (2-channel) wave file does not pan.
  2. When Mono button is clicked in the strip's properties, wave file will pan from left (-1) to right (+1) on monitoring output.
  3. panning from -1 to -2 and from +1 to +2 re-centers pan in 2-channel output, when Mono button is checked.
Confirming that under MacOS 10.13.3, Blender Vers 2.79a hash 61335d8 is working as advertised: 1) Stereo (2-channel) wave file does not pan. 2) When Mono button is clicked in the strip's properties, wave file will pan from left (-1) to right (+1) on monitoring output. 3) panning from -1 to -2 and from +1 to +2 re-centers pan in 2-channel output, when Mono button is checked.

In #47140#484595, @Paskperfect wrote:
Confirming that under MacOS 10.13.3, Blender Vers 2.79a hash 61335d8 is working as advertised:

  1. Stereo (2-channel) wave file does not pan.
  2. When Mono button is clicked in the strip's properties, wave file will pan from left (-1) to right (+1) on monitoring output.
  3. panning from -1 to -2 and from +1 to +2 re-centers pan in 2-channel output, when Mono button is checked.
  1. Accordin g to the Tool tip, panning only works for monoaural sources. There used to not be a button there for mono. Glad thats fixed.
  2. This is working as intended. (That's the fix for the problem you mention on 1)
  3. This should be centering your rear channels if you have a quadraphonic system or 5.1 surround setup and above enabled (user prefs, system, Channels. Set to 5.1)

2.0 audio setup (stereophonic) pan settings
hard front left -1
hard front right +1
+2 or -2 simply recenter and not applicable for 2.0 audio.
This is functioning like it should.

5.1 surround setup pan settings :
front centered / normal no rear channels. "0"
hard pan to the left: front left and rear left. -1
Center the rear left and rear right channels. -2
hard pan to the right: front right and rear right. +1
hard pan to the right: front right and rear right. +1
Center the rear left and rear right channels. +2

Here's a better explanation:
If you wanted your sound to go in circles clock wise around you, key it like this:
0, +1, +2, -2 , -1 , 0 That's 1 full circle clock wise in audio.

Counter clockwise:
0, -1, -2, +2, +1, 0 That's 1 full circle counter clock wise in audio.
Want it to spin you dizzy? 0, -1, -2, +2, +1, 0, -1, -2, +2, +1, 0 , -1, -2, +2, +1, 0 , -1, -2, +2, +1, 0 etc...

Two things to keep in mind, your system has to be set up for surround audio, and in blender you have to tell it how many channels you have set up under user prefs. See this screenshot: {F2276684}https://drive.google.com/open?id=1Rvb8QOrY2ljCocZg6lEkBiMFmeFm-fnE

~ @aecii
https://twitter.com/aecii_3d

> In #47140#484595, @Paskperfect wrote: > Confirming that under MacOS 10.13.3, Blender Vers 2.79a hash 61335d8 is working as advertised: > 1) Stereo (2-channel) wave file does not pan. > 2) When Mono button is clicked in the strip's properties, wave file will pan from left (-1) to right (+1) on monitoring output. > 3) panning from -1 to -2 and from +1 to +2 re-centers pan in 2-channel output, when Mono button is checked. 1) Accordin g to the Tool tip, panning only works for monoaural sources. There used to not be a button there for mono. Glad thats fixed. 2) This is working as intended. (That's the fix for the problem you mention on 1) 3) This should be centering your rear channels if you have a quadraphonic system or 5.1 surround setup and above enabled (user prefs, system, Channels. Set to 5.1) 2.0 audio setup (stereophonic) pan settings hard front left -1 hard front right +1 +2 or -2 simply recenter and not applicable for 2.0 audio. This is functioning like it should. 5.1 surround setup pan settings : front centered / normal no rear channels. "0" hard pan to the left: front left and rear left. -1 Center the rear left and rear right channels. -2 hard pan to the right: front right and rear right. +1 hard pan to the right: front right and rear right. +1 Center the rear left and rear right channels. +2 Here's a better explanation: If you wanted your sound to go in circles clock wise around you, key it like this: 0, +1, +2, -2 , -1 , 0 That's 1 full circle clock wise in audio. Counter clockwise: 0, -1, -2, +2, +1, 0 That's 1 full circle counter clock wise in audio. Want it to spin you dizzy? 0, -1, -2, +2, +1, 0, -1, -2, +2, +1, 0 , -1, -2, +2, +1, 0 , -1, -2, +2, +1, 0 etc... Two things to keep in mind, your system has to be set up for surround audio, and in blender you have to tell it how many channels you have set up under user prefs. See this screenshot: {[F2276684](https://archive.blender.org/developer/F2276684/Screenshot_from_2018-02-14_14-39-16.png)}https://drive.google.com/open?id=1Rvb8QOrY2ljCocZg6lEkBiMFmeFm-fnE ~ @aecii https://twitter.com/aecii_3d

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

As someone who has a 7.1 surround setup, I found it tremendously fun working out the value for my speaker setup.
I even made a spreadsheet detailing the values for my reference in the future:

Mono Panning.PNG

As someone who has a 7.1 surround setup, I found it tremendously fun working out the value for my speaker setup. I even made a spreadsheet detailing the values for my reference in the future: ![Mono Panning.PNG](https://archive.blender.org/developer/F2277034/Mono_Panning.PNG)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47140
No description provided.